[metadata]
name = pyhelm
summary = Python bindings for Helm: Kubernetes package manager
description-file =
    README.rst
home-page = https://github.com/flaper87/pyhelm
author = OpenStack
author-email = openstack-dev@lists.openstack.org
maintainer = Yaniv Oliver
maintainer_email = yanivoliver@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    pyhelm
    hapi

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_tree_index_modules = True
